# open5gs

lib/app/: ogs-app.h  ogs-context.c  ogs-context.h
lib/dbi/: subscription.c
lib/nas/5gs/: encoder.c
lib/pfcp/: build.c
src/: meson.build
src/amf/: gmm-handler.c  namf-handler.c  ngap-build.c  ngap-handler.c  ngap-sm.c
src/pcf/: am-sm.c
src/smf/: gsm-sm.c  ngap-handler.c
src/tsnaf/: app.c  context.c  context.h  event.c  event.h  init.c  meson.build  sbi-path.c  sbi-path.h
src/upf/: app.c  arp-nd.cpp  context.c  event.c  gtp-path.c  init.c  meson.build  n4-build.c  n4-handler.c  pfcp-path.c  pfcp-sm.c  rule-match.c  timer.c  upf-sm.c
tests/app/: 5gc-init.c
tests/vonr/: meson.build
webui/: package-lock.json
